--- a/index.html
+++ b/index.html
@@ -3,60 +3,62 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Hashir:'s Personal Website</title>
+  <title>Hashir</title>
+  <link rel="stylesheet" href="C:\Users\horizon\Desktop\HTML - Personal Site\CSS-My site\styles.css">
+  <link rel="icon" href="C:\Users\horizon\Desktop\HTML - Personal Site\CSS-My site\favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Merriweather&family=Montserrat&family=Sacramento&family=Tangerine&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Corinthia&family=Dancing+Script&family=Merriweather&family=Montserrat&family=Sacramento&family=Tangerine&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Corinthia&family=Dancing+Script&family=Great+Vibes&family=Merriweather&family=Montserrat&family=Sacramento&family=Tangerine&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="https://i.pinimg.com/564x/a5/73/b9/a573b95751c4d05671e881d37deb25d0.jpg" alt="Profile Picture"></td>
-      <td><h1>Hashir</h1>
-      <p><i>Professional <strong>Web Developer.</strong></i></p>
-      <p>This is my first personal webiste <br>Learning web development <br>So this is my first website</p></td>
-    </tr>
-  </table>
-  <hr size=3 noshade>
-  <h3>Education</h3>
-  <ul>
-    <li><a href="https://www.facebook.com/bpsharipur/">Beacon School</a></li>
-    <li><a href="https://www.facebook.com/alliedschoolharipur.haripurcampus/">Allied School</a></li>
-  </ul>
-  <hr size=3 noshade>
-  <h3>Learnings</h3>
-  <table>
-    <thead>
-      <th>Work</th>
-      <th>Dates</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Learning Web development</td>
-        <td>2022-2023</td>
-      </tr>
-      <tr>
-        <td>Learning Python</td>
-        <td>2023-2024</td>
-    </tbody>
-  </table>
-  <a href="Hobbies.html"><h3>My Hobbies</h3></a>
-  <a href="Contact Info.html"><h3>Contact Info</h3></a>
-  <hr size=3 noshade>
-  <h3>Skills</h3>
-  <table cellspacing="20">
-    <tr>
-      <td>Gaming</td>
-      <td>⭐⭐⭐⭐⭐</td>
-      <td>Football</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Video Editing</td>
-      <td>⭐⭐⭐⭐</td>
-      <td>Photography</td>
-      <td>⭐⭐</td>
-    </tr>
-  </table>
-  <hr size=3 noshade>
+  <div class="Top-container">
+    <img class="top-cloud" src="C:\Users\horizon\Desktop\HTML - Personal Site\CSS-My site\CSS - My Site Images\cloud.png" alt="cloud.img">
+    <h1>I'm Hashir.</h1>
+    <h2>a web designer.</h2>
+    <img class="bottom-cloud" src="C:\Users\horizon\Desktop\HTML - Personal Site\CSS-My site\CSS - My Site Images\cloud.png" alt="cloud.img">
+    <img src="C:\Users\horizon\Desktop\HTML - Personal Site\CSS-My site\CSS - My Site Images\mountain.png" alt="mountain.img">
+  </div>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-pic" src="C:\Users\horizon\Desktop\HTML - Personal Site\CSS-My site\hashir.png" alt="Profile Pic">
+      <h2>Hello.</h2>
+      <p class="about-me">I'm a Web Designer and I can do Paid work for you.</p>
+    </div>
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="web-design" src="https://cdn-icons-png.flaticon.com/128/2282/2282188.png" alt="Web Design">
+        <h3>Web Design and Development</h3>
+        <p>I am just a beginner and I'm Learning to code and Web Development. Soon I'll become a Professional Full Stack Web Developer and Designer.</p>
+      </div>
+      <div class="skill-row">
+        <img class="video-editing" src="https://cdn-icons-png.flaticon.com/128/1229/1229654.png" alt="Video Editing">
+        <h3>Video Editing</h3>
+        <p>I'm pretty good in Editing Gaming Videos and I've done paid work Editing Gaming Montages like Valorant , Player's Unknown Battlegrounds , Apex Legends.</p>
+      </div>
+    </div>
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you want to Design your Website.</h3>
+      <p>One day I'll be Professional Web Developer.</p>
+      <a class="btn" href="mailto:khankhan0009797@gmail.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.instagram.com/ig.hashir11/">Instagram</a>
+    <a class="footer-link" href="https://twitter.com/HashirRaza20">Twitter</a>
+    <a class="footer-link" href="file:///C:/Users/horizon/Desktop/HTML%20-%20Personal%20Site/CSS-My%20site/index.html">Website</a>
+    <p class="copyright">© Muhammad Hashir.</p>
+  </div>
+
 
 </body>
 
